--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -163,7 +163,7 @@
     "otp.key": "Private key",
     "otp.link": "Generate One-Time-Password",
     "otp.title": "Generate new One-Time-Password",
-    "report.link": "",
+    "report.link": "Report",
     "reports.a10.description.long": "<strong>What issuers issued what number of a specific certificate type in a defined period?</strong></br></br>After you select a certificate type, this report provides you with a list, broken down by issuer, of the total certificate types issued.",
     "reports.a10.description.short": "Overview of all issuers of a specific certificate type, including issuing channel, for a defined period.",
     "reports.a11.description.long": "<strong>Which certificates were revoked in a certain period? </strong></br></br>This report provides you with a list of all certificates revoked in the selected canton in the defined period. Please note that the revocation period does not match the certificate issue period.",
@@ -174,7 +174,7 @@
     "reports.a12.title": "A12",
     "reports.a2.description.long": "<strong>Who issued this specific certificate, when did they issue it, via what issuing channel, and what type of certificate was it?</strong></br></br>After entry of the UVCI this report provides you with information on the issuer, the time of issue, the issuing channel and the type of certificate being searched for. Information on the person for whom the certificate was issued is not available.",
     "reports.a2.description.short": "Detailed information (issuing channel, issuer, time and type of certificate) for a specific certificate UVCI. Information on the person for whom the certificate was issued is not available.",
-    "reports.a2.reset-input": "",
+    "reports.a2.reset-input": "Reset entry",
     "reports.a2.title": "A2",
     "reports.a3.description.long": "<strong>How many certificates of what type did a specific issuer issue via what channels in a defined period?</strong></br></br>This report provides you with a list, broken down by issuer, of the total certificate types issued and issuing channels.",
     "reports.a3.description.short": "Number and type of all certificates issued by a specific issuer or an organisational unit.",
@@ -195,13 +195,13 @@
     "reports.a9.description.long": "<strong>How many certificates of the various certificate types have been issued so far over the entire issue period via which channels?</strong></br></br>This report provides you with the total number of certificates of one type issued and the channels by via which they were issued.",
     "reports.a9.description.short": "Total number of certificates of a type, broken down by issuing channel, in the entire issue period.",
     "reports.a9.title": "A9",
-    "reports.aggregation.header": "",
+    "reports.aggregation.header": "Desidera ottenere una panoramica generale dei certificati emessi in Svizzera sotto forma di analisi statistica? Crei un rapporto statistico.",
     "reports.aggregation.info": "A report presenting statistical values for a specific time period is created. Suspicious values may indicate a possible case of abuse by individual issuers or organisations.",
     "reports.aggregation.title": "Aggregation",
-    "reports.detail.header": "",
+    "reports.detail.header": "Want to prove or refute a concrete case of suspicion by analysing the individual actions of an issuer? Then create an detailed report.",
     "reports.detail.info": "In a concrete case of suspicion a report is created showing every single action of an issuer or issuing organisation. The evidence can be used to refute or prove the concrete case of abuse.",
     "reports.detail.title": "Detail",
-    "reports.generate": "",
+    "reports.generate": "Generate report",
     "reports.generation.info": "Your query is being processed and the report created. If there are large volumes of data involved this can take several minutes. We ask you to be patient.\nImportant: Please do not close this window while the report is being created and do not reload, as this will cancel the creation of the report.",
     "reports.generation.success": "Many thanks for your patience. The report has now been generated and is ready for you to download.",
     "reports.generation.success.title": "Report successfully generated",
@@ -212,7 +212,7 @@
     "reports.param-help.description": "",
     "reports.param-help.download": "",
     "reports.param-help.title": "",
-    "reports.statistic.header": "",
+    "reports.statistic.header": "Want a statistical analysis giving you a general overview of the issue of certificates in Switzerland? Then create a statistical report.",
     "reports.statistic.info": "The statistical report presents overall figures for COVID certificates issued in Switzerland by certificate type.",
     "reports.statistic.title": "Statistics",
     "reports.uvci.format": "Format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
@@ -240,5 +240,6 @@
     "validation.error.http.480": "UVCI already revoked",
     "validation.error.http.482": "The CSV was not processed due to an invalid size. It must contain 1 to 100 entries.",
     "validation.error.http.485": "One or more of the requests in the CSV contain invalid data. For more detailed error messages check the returned CSV file.",
-    "validation.error.http.489": "Invalid date of birth. Please check your input in step two."
+    "validation.error.http.489": "Invalid date of birth. Please check your input in step two.",
+    "validation.error.http.497": "Your file contains duplicates. No revocation has been performed. Corrected the file and restarted the operation.\t"
 }
