--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -114,7 +114,7 @@
     "dashboard.otp.title": "Générer un nouvel One-Time-Password",
     "dashboard.reports.action": "",
     "dashboard.reports.description": "",
-    "dashboard.reports.title": "",
+    "dashboard.reports.title": "Rapport",
     "dashboard.upload.action": "Générer plusieurs certificats",
     "dashboard.upload.description": "Vous pouvez générer ici plusieurs certificats.",
     "dashboard.upload.title": "Générer plusieurs certificats",
@@ -174,7 +174,7 @@
     "reports.a12.title": "A12",
     "reports.a2.description.long": "<strong>Qui a délivré ce certificat spécifique, quand et par quel canal d’émission, et de quel type de certificat s’agissait-il?</strong></br></br>Après saisie de l'UVCI, ce rapport vous fournit des informations sur l’émetteur, la date et le canal d’émission ainsi que le type de certificat recherché. Les informations relatives à la personne pour laquelle le certificat a été délivré ne sont pas disponibles.",
     "reports.a2.description.short": "Informations détaillées (canal d’émission, émetteur, date et type de certificat) sur une UVCI de certificat spécifique. Les informations relatives à la personne pour laquelle le certificat a été délivré ne sont pas disponibles.",
-    "reports.a2.reset-input": "",
+    "reports.a2.reset-input": "Rétablir la saisie",
     "reports.a2.title": "A2",
     "reports.a3.description.long": "<strong>Combien de certificats de quel type un émetteur spécifique a-t-il délivrés dans une période donnée et par quels canaux?</strong></br></br>Ce rapport vous fournit une liste classée par émetteur avec la somme des types de certificats délivrés et des canaux d’émission.",
     "reports.a3.description.short": "Nombre et type de tous les certificats délivrés par un émetteur spécifique ou une unité organisationnelle (unit).",
@@ -195,10 +195,10 @@
     "reports.a9.description.long": "<strong>Combien de certificats des différents types ont été délivrés à ce jour, et par quels canaux, sur l’ensemble de la période d’émission ?</strong></br></br>Ce rapport vous fournit le nombre total de certificats délivrés pour un type donné et les canaux par lesquels ils ont été délivrés.",
     "reports.a9.description.short": "Nombre total de certificats d’un type donné, ventilé par canal d’émission, pour l’ensemble de la période d’émission.",
     "reports.a9.title": "A9",
-    "reports.aggregation.header": "",
+    "reports.aggregation.header": "Vous souhaitez vérifier si le nombre de certificats établis dans votre canton révèle d’éventuels abus ? Rédigez un rapport d’agrégation.",
     "reports.aggregation.info": "Un rapport est généré, qui présente des valeurs statistiques sur une période donnée. Des valeurs suspectes peuvent indiquer un éventuel abus de la part de certains émetteurs ou organisations.",
     "reports.aggregation.title": "Agrégation",
-    "reports.detail.header": "",
+    "reports.detail.header": "Vous souhaitez confirmer ou infirmer un soupçon concret en analysant les activités d’un émetteur précis ? Rédigez un rapport de détail.",
     "reports.detail.info": "Dans un cas concret de suspicion, un rapport est établi, qui indique chaque action individuelle d’un émetteur ou d’une organisation émettrice. Cette preuve permet de réfuter ou d’attester l’abus concret. ",
     "reports.detail.title": "Détail",
     "reports.generate": "",
@@ -212,7 +212,7 @@
     "reports.param-help.description": "",
     "reports.param-help.download": "",
     "reports.param-help.title": "",
-    "reports.statistic.header": "",
+    "reports.statistic.header": "Vous souhaitez obtenir un aperçu global des certificats émis en Suisse sous forme d’une évaluation statistique ? Rédigez un rapport statistique.",
     "reports.statistic.info": "Le rapport statistique présente le nombre total de certificats COVID générés en Suisse par type de certificat.",
     "reports.statistic.title": "Statistiques",
     "reports.uvci.format": "Format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
@@ -240,5 +240,6 @@
     "validation.error.http.480": "UVCI déjà verrouillé",
     "validation.error.http.482": "Le CSV n'a pas été traité en raison d'une taille non valide. Il doit contenir de 1 à 100 entrées.",
     "validation.error.http.485": "Une ou plusieurs des requêtes du CSV contiennent des données non valides. Pour des messages d'erreur plus détaillés, vérifiez le fichier CSV retourné.",
-    "validation.error.http.489": "Date de naissance non valide. Veuillez vérifier votre saisie à l'étape 2."
+    "validation.error.http.489": "Date de naissance non valide. Veuillez vérifier votre saisie à l'étape 2.",
+    "validation.error.http.497": "Votre fichier contient des doublons. Aucune révocation n'a été effectué. Corrigé le fichier et recommencé l'opération.\t"
 }
