--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -114,7 +114,7 @@
     "dashboard.otp.title": "Generare una nuova One-Time-Password",
     "dashboard.reports.action": "",
     "dashboard.reports.description": "",
-    "dashboard.reports.title": "",
+    "dashboard.reports.title": "Rapporto",
     "dashboard.upload.action": "Generare più certificati",
     "dashboard.upload.description": "Qui potete generare più certificati.",
     "dashboard.upload.title": "Generare più certificati",
@@ -174,7 +174,7 @@
     "reports.a12.title": "A12",
     "reports.a2.description.long": "<strong>Chi ha rilasciato il certificato in questione, quando e attraverso quale canale? Di che tipo di certificato si tratta?</strong></br></br>Achtung: folgender Text noch nicht definitiv, muss noch überprüft werden!\nLungo: \nDopo che sono state immesse l'UVCI, il rapporto fornisce informazioni sull'emittente, la data e il canale di emissione nonché il tipo di certificato oggetto della ricerca. Non vengono fornite informazioni sulla persona per la quale è stato rilasciato il certificato.",
     "reports.a2.description.short": "Informazioni dettagliate (canale di emissione, emittente, data del rilascio e tipo di certificato) su uno specifico identificativo del certificato (UVCI). Non vengono fornite informazioni sulla persona per la quale è stato rilasciato il certificato.",
-    "reports.a2.reset-input": "",
+    "reports.a2.reset-input": "Annulla l’immissione",
     "reports.a2.title": "A2",
     "reports.a3.description.long": "<strong>Quanti certificati di quale tipo sono stati rilasciati da uno specifico emittente in un determinato periodo di tempo e attraverso quali canali?</strong></br></br>Questo rapporto fornisce un elenco, suddiviso per emittenti, con il numero totale di tipi di certificati rilasciati e i relativi canali di emissione. ",
     "reports.a3.description.short": "Numero e tipo di tutti i certificati rilasciati da uno specifico emittente o da una specifica unità organizzativa (Unit).",
@@ -195,12 +195,12 @@
     "reports.a9.description.long": "<strong>Quanti certificati dei diversi tipi sono stati rilasciati finora nell’intero periodo di emissione e attraverso quali canali?</strong></br></br>Questo rapporto fornisce il numero totale di certificati rilasciati di un tipo specifico e informa sui canali attraverso i quali sono stati rilasciati.",
     "reports.a9.description.short": "Numero totale di certificati di un tipo specifico, suddivisi per canale di emissione nell’intero periodo di emissione.",
     "reports.a9.title": "A9",
-    "reports.aggregation.header": "",
+    "reports.aggregation.header": "Desidera verificare se le cifre relative ai certificati emessi nel Suo Cantone sono indice di un possibile caso di abuso? Crei un rapporto di aggregazione.",
     "reports.aggregation.info": "",
-    "reports.aggregation.title": "",
-    "reports.detail.header": "",
+    "reports.aggregation.title": "Aggregazione",
+    "reports.detail.header": "Desidera confermare o confutare un caso concreto di sospetto abuso analizzando le singole azioni di un dato emittente? Crei un rapporto di dettaglio.",
     "reports.detail.info": "",
-    "reports.detail.title": "",
+    "reports.detail.title": "Dettaglio",
     "reports.generate": "",
     "reports.generation.info": "La richiesta è in fase di elaborazione e il rapporto verrà generato a breve. In caso di grandi quantità di dati possono essere necessari diversi minuti. Si prega di attendere.\nAttenzione: non chiudere questa finestra durante il processo di elaborazione e non ricaricare la pagina per non annullare la generazione del rapporto.",
     "reports.generation.success": "Grazie dell’attesa. Il rapporto è stato ultimato ed è pronto per il download.",
@@ -212,9 +212,9 @@
     "reports.param-help.description": "",
     "reports.param-help.download": "",
     "reports.param-help.title": "",
-    "reports.statistic.header": "",
+    "reports.statistic.header": "Desidera ottenere una panoramica generale dei certificati emessi in Svizzera sotto forma di analisi statistica? Crei un rapporto statistico.",
     "reports.statistic.info": "",
-    "reports.statistic.title": "",
+    "reports.statistic.title": "Statistica",
     "reports.uvci.format": "Formato: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
     "reports.uvci.format.error": "",
     "reports.uvci.info": "",
@@ -240,5 +240,6 @@
     "validation.error.http.480": "UVCI già bloccato",
     "validation.error.http.482": "Il CSV non è stato elaborato a causa di una dimensione non valida. Deve contenere da 1 a 100 voci.",
     "validation.error.http.485": "Una o più delle query CSV contiene dati non validi. Per messaggi di errore più dettagliati, controlla il file CSV restituito.",
-    "validation.error.http.489": "Data di nascita non valida. Si prega di controllare i dati inseriti nella fase due."
+    "validation.error.http.489": "Data di nascita non valida. Si prega di controllare i dati inseriti nella fase due.",
+    "validation.error.http.497": "Il vostro file contiene duplicati. Non è stata effettuata alcuna revoca. Correggere il file e riavviare l'operazione."
 }
