--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -241,5 +241,5 @@
     "validation.error.http.482": "Le CSV n'a pas été traité en raison d'une taille non valide. Il doit contenir de 1 à 100 entrées.",
     "validation.error.http.485": "Une ou plusieurs des requêtes du CSV contiennent des données non valides. Pour des messages d'erreur plus détaillés, vérifiez le fichier CSV retourné.",
     "validation.error.http.489": "Date de naissance non valide. Veuillez vérifier votre saisie à l'étape 2.",
-    "validation.error.http.497": "Votre fichier contient des doublons. Aucune révocation n'a été effectué. Corrigé le fichier et recommencé l'opération.\t"
+    "validation.error.http.497": "Votre fichier contient des doublons. Aucun certificat n'a été révoqué. Veuillez corriger le fichier et répéter la procédure."
 }
