--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -241,5 +241,5 @@
     "validation.error.http.482": "Il CSV non è stato elaborato a causa di una dimensione non valida. Deve contenere da 1 a 100 voci.",
     "validation.error.http.485": "Una o più delle query CSV contiene dati non validi. Per messaggi di errore più dettagliati, controlla il file CSV restituito.",
     "validation.error.http.489": "Data di nascita non valida. Si prega di controllare i dati inseriti nella fase due.",
-    "validation.error.http.497": "Il vostro file contiene duplicati. Non è stata effettuata alcuna revoca. Correggere il file e riavviare l'operazione."
+    "validation.error.http.497": "Il vostro file contiene duplicati. Nessun certificato è stato revocato. Correggere il file e ripetere la procedura."
 }
