--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,6 +1,12 @@
 {
     "application.organization.name": "Bundesamt für Informatik und Telekommunikation BIT",
     "application.title": "Covid-Zertifikat",
+    "bulk.revocation.file.upload": "Zertifikate sperren",
+    "bulk.revocation.instructions": "Sie können hier mehrere Zertifikate sperren. Laden Sie dazu bitte die CSV-Datei mit den entsprechenden Daten hoch.",
+    "bulk.revocation.link": "Mehrere Zertifikate sperren",
+    "bulk.revocation.success": "Die Zertifikate wurden erfolgreich widerrufen.",
+    "bulk.revocation.title": "Mehrere Zertifikate sperren",
+    "bulk.revocation.warning": "Nicht alle Sperrungen waren erfolgreich. Bitte prüfen Sie die generierte CSV-Datei, um Details zu erfahren.",
     "certificateCreate.form.group.personalData": "Personalien",
     "certificateCreate.form.group.recovery": "Genesung",
     "certificateCreate.form.group.test": "Test",
@@ -13,7 +19,7 @@
     "certificateCreate.form.label.personalData.firstName": "Vorname",
     "certificateCreate.form.label.personalData.specialDate": "Spezielles Format",
     "certificateCreate.form.label.personalData.surName": "Nachname",
-    "certificateCreate.form.label.radio.nonRetroactive": "<strong>Es handelt sich <u>nicht</u> um eine nachträgliche Ausstellung</strong> eines Covid-19-Zertifikates. <strong>Ich bestätige hiermit, dass die originale Krankengeschichte bzw. Primärdokumentation bei mir vorliegt</strong> und ich dafür sorge, dass die eindeutige Zertifikatskennung und vorgelegten Angaben/Nachweise derart dokumentiert werden, dass die rechtmässige Ausstellung später jederzeit nachvollzogen werden kann. ",
+    "certificateCreate.form.label.radio.nonRetroactive": "<strong>Es handelt sich um eine Ausstellung</strong> eines Covid-19-Zertifikates aufgrund der eigenen Primärdokumentation (keine Nachweise von Dritten). <strong>Ich bestätige hiermit, dass für die Ausstellung des Covid-Zertifikats die originale Krankengeschichte bzw. Primärdokumentation bei mir vorliegt</strong> und ich dafür sorge, dass die eindeutige Zertifikatskennung und vorgelegten Angaben/Nachweise derart dokumentiert werden, dass die rechtmässige Ausstellung später jederzeit nachvollzogen werden kann.",
     "certificateCreate.form.label.radio.retroactive": "<strong>Es handelt sich um eine nachträgliche Ausstellung</strong> eines Covid-19-Zertifikats <strong>ohne originale Krankengeschichte bzw. Primärdokumentation.</strong> \nFür eine im Ausland erhaltene Impfung oder durchgemachte Erkrankung nur für Personen gem. Art. 7 Abs. 1 Bst. b der Verordnung Covid-Zertifikate (Aufenthaltsrecht in der Schweiz). <strong>Ich bestätige hiermit, dass ich vom Kanton für die Behandlung solcher Anträge speziell bezeichnet wurde</strong> (Art. 7 der Verordnung Covid-Zertifikate) und ich dafür sorge, dass die eindeutige Zertifikatskennung und vorgelegten Angaben/Nachweise derart dokumentiert werden, dass die rechtmässige Ausstellung später jederzeit nachvollzogen werden kann. \nDetails dazu siehe Art. 7 der Verordnung Covid-Zertifikate <a href=\"https://www.fedlex.admin.ch/eli/cc/2021/325/de#art_7\">(https://www.fedlex.admin.ch/eli/cc/2021/325/de#art_7)</a>.",
     "certificateCreate.form.label.recovery.countryOfTest": "Land der Testdurchführung",
     "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Datum des ersten positiven Resultats",
@@ -93,6 +99,9 @@
     "common.language.it": "Italienisch",
     "common.language.rm": "Romanisch",
     "common.next": "Weiter",
+    "dashboard.bulk.revocation.action": "Mehrere Zertifikate sperren",
+    "dashboard.bulk.revocation.description": "Hier können Sie mehrere erstellte Zertifikate sperren. Gesperrte Zertifikate werden als nicht gültig deklariert und können nicht mehr verwendet werden.",
+    "dashboard.bulk.revocation.title": "Mehrere Zertifikate sperren",
     "dashboard.createCertificate.action": "Zertifikat erstellen",
     "dashboard.createCertificate.description": "Hier können Sie ein neues Zertifikat erstellen.",
     "dashboard.createCertificate.title": "Neues Zertifikat erstellen",
@@ -155,10 +164,8 @@
     "otp.link": "One-Time-Password generieren",
     "otp.title": "Neues One-Time-Password generieren",
     "report.link": "Report",
-    "reports.a1.title": "",
     "reports.a10.description.long": "<strong>Welche Aussteller/innen haben welche Anzahl eines spezifischen Zertifikatstyps in einem definierten Zeitraum ausgestellt? </strong></br></br>Dieser Report liefert Ihnen, nach Auswahl eines Zertifikatstyps, eine nach Aussteller/in gegliederte Liste mit der Summe der ausgestellten Zertifikatstypen.",
     "reports.a10.description.short": "Übersicht aller Aussteller/innen eines bestimmten Zertifikatstyps inkl. Ausstellkanal für einen definierten Zeitraum.",
-    "reports.a10.title": "A7 / A10",
     "reports.a11.description.long": "<strong>Welche Zertifikate sind während eines bestimmten Zeitraums revoziert worden?</strong></br></br>Dieser Report liefert Ihnen eine Liste aller revozierten Zertifikate, die während des angefragten Zeitraums im ausgewählten Kanton revoziert worden sind. Bitte beachten Sie, dass der Revokationszeitraum nicht dem Ausstellungszeitraum der Zertifikate entspricht.",
     "reports.a11.description.short": "Liste revozierter Zertifikate eines bestimmten Zeitraums.",
     "reports.a11.title": "A11",
@@ -167,44 +174,48 @@
     "reports.a12.title": "A12",
     "reports.a2.description.long": "<strong>Wer hat wann und über welchen Ausstellkanal dieses spezifische Zertifikat ausgestellt und welcher Zertifikatstyp war das?</strong></br></br>\nNach Eingabe der UVCI liefert Ihnen dieser Report Informationen zur Ausstellerin/zum Aussteller, den Ausstellzeitpunkt und -kanal sowie den Typ des gesuchten Zertifikats. Informationen zur Person, für die das Zertifikat ausgestellt wurde, sind nicht verfügbar.",
     "reports.a2.description.short": "Detailinformationen (Ausstellkanal, Aussteller/in, Zeitpunkt und Zertifikatstyp) zu einer spezifischen Zertifikats-UVCI. Informationen zur Person, für die das Zertifikat ausgestellt wurde, sind nicht verfügbar.",
+    "reports.a2.reset-input": "Eingabe zurücksetzen",
     "reports.a2.title": "A2",
     "reports.a3.description.long": "<strong>Wie viele Zertifikate welchen Typs hat ein spezifischer Aussteller in einem definierten Zeitraum über welche Kanäle ausgestellt?</strong></br></br>Dieser Report liefert Ihnen eine nach Aussteller/in gegliederte Liste mit der Summe der ausgestellten Zertifikatstypen und Ausstellkanäle.",
     "reports.a3.description.short": "Anzahl und Typ aller ausgestellten Zertifikate einer spezifischen Ausstellerin, eines spezifischen Ausstellers oder einer Organisationseinheit (Unit).",
-    "reports.a3.title": "A3",
+    "reports.a3.title": "A3 / A5",
     "reports.a4.description.long": "<strong>Welche Zertifikate (UVCI, Typ, Zeitpunkt) hat ein/e spezifische/r Aussteller/in in einem definierten Zeitraum über welche Kanäle ausgestellt? </strong></br></br>Nach der Auswahl und Suche der entsprechenden Einheiten (Organisation / Aussteller/in) liefert Ihnen dieser Report eine Liste mit den ausgestellten Zertifikaten inkl. Details wie Zertifikatstyp, Ausstellkanal, Ausstellzeitpunkt und UVCI.",
     "reports.a4.description.short": "Detailinformationen zu allen ausgestellten Zertifikaten einer bestimmten Ausstellerin, eines bestimmten Ausstellers oder Organisationseinheit (Unit).",
     "reports.a4.title": "A4 / A6",
     "reports.a5.description.long": "<strong>Wie viele Zertifikate welchen Typs haben die einzelnen Aussteller/innen einer Unit in einem definierten Zeitraum über welche Kanäle ausgestellt?</strong></br></br>Nach der Auswahl und Suche der entsprechenden Einheiten (Organisation / Aussteller/in) liefert Ihnen dieser Report eine nach Aussteller/in gegliederte Liste mit der Summe der ausgestellten Zertifikatstypen und Ausstellkanäle.",
     "reports.a5.description.short": "Anzahl und Typ aller ausgestellten Zertifikate einer spezifischen Ausstellerin, eines spezifischen Ausstellers oder einer Organisationseinheit (Unit).",
-    "reports.a5.title": "A3 / A5",
     "reports.a6.description.long": "<strong>Welche Zertifikate (UVCI, Typ, Zeitpunkt, Kanal) haben die einzelnen Aussteller/innen einer Unit in einem definierten Zeitraum ausgestellt?</strong></br></br>Nach der Auswahl und Suche der entsprechenden Einheiten (Organisation / Aussteller/in) liefert Ihnen dieser Report eine nach Aussteller/in gegliederte Liste mit den pro Aussteller/in ausgestellten Zertifikaten inkl. Details wie Zertifikatstyp, Ausstellkanal, Ausstellzeitpunkt und UVCI pro Zertifikat.",
     "reports.a6.description.short": "Detailinformationen zu allen ausgestellten Zertifikaten einer bestimmten Ausstellerin/ eines bestimmten Ausstellers oder Organisationseinheit (Unit). ",
-    "reports.a6.title": "A4 / A6",
     "reports.a7.description.long": "<strong>Welche/r Aussteller/in hat welche Anzahl eines spezifischen Zertifikatstyps in einem definierten Zeitraum ausgestellt? </strong></br></br>Dieser Report liefert Ihnen, nach Auswahl eines Zertifikatstyps, eine Liste von Aussteller/innen und die jeweilige Anzahl ausgestellter Zertifikate dieses Typs. ",
     "reports.a7.description.short": "Übersicht aller Aussteller/innen eines bestimmten Zertifikatstyps inkl. Ausstellkanal für einen definierten Zeitraum.",
-    "reports.a7.title": "A7",
+    "reports.a7.title": "A7 / A10",
     "reports.a8.description.long": "<strong>Wie viele Zertifikate der verschiedenen Zertifikatstypen wurden pro Woche (max. letzte 3 Monate) über welche Kanäle ausgestellt?</strong></br></br>Dieser Report liefert Ihnen eine wochenweise Liste von Zertifikatstypen und deren jeweilige Anzahl pro Ausstellkanal (je Woche ein Tabellenblatt). Das zweite bis x-te Tabellenblatt weisst dabei zusätzlich die Differenz zur Vorwoche aus.",
     "reports.a8.description.short": "Wochenweise Anzahl Zertifikate pro Typ, gegliedert nach Ausstellkanal.",
     "reports.a8.title": "A8",
     "reports.a9.description.long": "<strongWie viele Zertifikate der verschiedenen Zertifikatstypen wurden bisher über den gesamten Ausstellungszeitraum über welche Kanäle ausgestellt?></strong></br></br>Dieser Report liefert Ihnen die Gesamtanzahl der ausgestellten Zertifikate eines Typs und die Kanäle, über welche sie ausgestellt wurden.",
     "reports.a9.description.short": "Gesamtanzahl Zertifikate eines Typs im gesamten Ausstellungszeitraum, gegliedert nach Ausstellkanal.",
     "reports.a9.title": "A9",
-    "reports.aggregation.header": "Sie möchten einen Verdachtsfall entdecken? Wählen Sie dazu einen Aggregationsreport.",
-    "reports.aggregation.info": "Es wird ein Report erstellt, der statistische Werte über einen bestimmten Zeitraum ausweist. Verdächtige Werte können auf einen allfälligen Missbrauchsfall von einzelnen Aussteller/innen oder Organisationen hinweisen.",
-    "reports.aggregation.title": "Aggregation",
-    "reports.detail.header": "Sie möchten einen Verdachtsfall analysieren? Wählen Sie dazu einen Detailreport.",
-    "reports.detail.info": "In einem konkreten Verdachtsfall wird ein Report erstellt, der jede einzelne Aktion einer Ausstellerin oder eines Ausstellers oder einer ausstellenden Organisation ausweist. Mit dem Nachweis kann der konkrete Missbrauchsfall widerlegt oder bewiesen werden.",
-    "reports.detail.title": "Detail",
-    "reports.param-help.description": "Falls Sie Fragen zu den Parametern haben, finden Sie hier zu jedem Parameter eine Erklärung.",
+    "reports.aggregation.header": "Sie möchten prüfen, ob die Zahlen zur Zertifikatsausstellung in Ihrem Kanton auf einen allfälligen Missbrauchsfall hinweisen? Erstellen Sie dazu einen Aggregationsreport.",
+    "reports.detail.header": "Sie möchten einen konkreten Verdachtsfall belegen oder widerlegen, indem Sie die einzelnen Aktionen einer Ausstellerin/eines Ausstellers analysieren? Erstellen Sie dazu einen Detailreport.",
+    "reports.generate": "Report generieren",
+    "reports.generation.info": "Ihre Abfrage wird ausgeführt und der Report erstellt. Bei grossen Datenmengen, kann dies mehrere Minuten in Anspruch nehmen. Wir bitten Sie um etwas Geduld. Achtung: Bitte schliessen Sie dieses Fenster während dieser Zeit nicht und machen Sie keinen Reload, da das Erstellen des Reports dadurch abgebrochen wird.",
+    "reports.generation.success": "Vielen Dank für Ihre Geduld. Der Report ist nun fertiggestellt und steht Ihnen zum Download zur Verfügung.",
+    "reports.generation.success.title": "Ihr Report wurde generiert",
+    "reports.generation.success.warning": "Bitte beachten Sie, dass nicht für alle Suchparameter Daten gefunden oder ausgegeben werden konnten. Für detailliertere Hinweise prüfen Sie den erstellten Report.",
+    "reports.generation.title": "Ihr Report wird generiert",
+    "reports.generation.too-big": "Die Anzahl Datensätze, die den Suchkriterien entsprechen ist zu gross und die Abfrage kann nicht abgeschlossen werden.\nBitte schränken Sie die Suche weiter ein.",
+    "reports.generation.too-big.title": "Fehler",
+    "reports.param-help.description": "Falls Sie Fragen zu den Parametern haben, wird hier jeder Parameter erklärt.",
     "reports.param-help.download": "Download Hilfestellung",
     "reports.param-help.title": "Hilfestellung Parameter",
-    "reports.statistic.header": "Sie möchten eine statistische Auswertung? Wählen Sie dazu einen Statistikreport.",
-    "reports.statistic.info": "Mit dem Statistikreport werden die Gesamtzahlen der in der Schweiz erstellten Covid-Zertifikaten pro Zertifikatstyp ausgewiesen.",
-    "reports.statistic.title": "Statistik",
+    "reports.statistic.header": "Sie möchten einen allgemeinen Überblick über die Zertifikatsausstellung in der Schweiz in Form einer statistischen Auswertung erhalten? Erstellen Sie dazu einen Statistikreport.",
+    "reports.uvci.format": "Format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
+    "reports.uvci.format.error": "Die UVCI muss im Format urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx sein.",
+    "reports.uvci.info": "Bitte geben Sie die UVCI des Zertifikats ein.</br>Falls Sie mehrere UVCI gleichzeitig überprüfen lassen möchten, können Sie diese mit Leerschlag, Enter oder Komma trennen.",
     "support.instructions": "Sollten Sie Probleme mit dem CSV Upload haben, wenden Sie sich bitte an den BIT-Helpdesk:",
     "support.instructionsUpdated": "Sollten Sie technische Probleme mit der Ausstellung haben, können Sie sich an den BIT-Helpdesk wenden.",
     "support.title": "Support",
-    "upload.file.noneSelected": "Kein CSV Datei ausgewählt.",
+    "upload.file.noneSelected": "Keine CSV Datei ausgewählt.",
     "upload.file.select": "CSV Datei auswählen",
     "upload.file.select.limit": "Maximale Grösse: 40 Kb. Maximale Einträge: 100",
     "upload.file.upload": "Zertifikate generieren",
@@ -223,5 +234,6 @@
     "validation.error.http.480": "UVCI wurde bereits gesperrt",
     "validation.error.http.482": "Das CSV konnte nicht verarbeitet werden aufgrund einer ungültigen Grösse. Es müssen 1 bis 100 Einträge enthalten sein.",
     "validation.error.http.485": "Eine oder mehrere der Anfragen in der CSV enthalten ungültige Daten. Für detailliertere Fehlermeldungen prüfen Sie die zurückgegebene CSV Datei.",
-    "validation.error.http.489": "Ungültiges Geburtsdatum. Bitte überprüfen Sie Ihre Eingabe in Schritt zwei."
+    "validation.error.http.489": "Ungültiges Geburtsdatum. Bitte überprüfen Sie Ihre Eingabe in Schritt zwei.",
+    "validation.error.http.497": "Ihre Datei enthält Duplikate. Es wurden keine Zertifikate revoziert. Bitte korrigieren Sie die Datei und wiederholen Sie den Vorgang."
 }
