--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,12 @@
 {
     "application.organization.name": "Federal Office of Information Technology, Systems and Telecommunication FOITT",
     "application.title": "COVID certificate",
+    "bulk.revocation.file.upload": "Revoke certificates",
+    "bulk.revocation.instructions": "Here you can revoke multiple certificates. Please upload the CSV file containing the data.",
+    "bulk.revocation.link": "Revoke multiple certificates",
+    "bulk.revocation.success": "Certificates have been successfully revoked.",
+    "bulk.revocation.title": "Revoke multiple certificates",
+    "bulk.revocation.warning": "Not all revocations were successful. Please check the returned CSV to know the details.",
     "certificateCreate.form.group.personalData": "Personal data",
     "certificateCreate.form.group.recovery": "Recovery",
     "certificateCreate.form.group.test": "Test",
@@ -13,8 +19,8 @@
     "certificateCreate.form.label.personalData.firstName": "First name",
     "certificateCreate.form.label.personalData.specialDate": "Unusual format",
     "certificateCreate.form.label.personalData.surName": "Last name",
-    "certificateCreate.form.label.radio.nonRetroactive": "<strong>This is <u>not</u> about a retrospective issue</strong> of a COVID-19 certificate. <strong>I hereby confirm that I am in possession of the original case history or primary documentation</strong> and that I am ensuring that the unique certificate identifier and the information/evidence provided is documented in such a way that the legitimate issue can later be traced at any time. ",
-    "certificateCreate.form.label.radio.retroactive": "<strong>This is about a retrospective issue</strong> of a COVID-19 certificate <strong>without the original case history or primary documentation. </strong> \nFor a vaccination or recovery abroad only for persons specified in Art. 7 para. 1 let. b of the COVID-19 Certificates Ordinance (with a right of residence in Switzerland). <strong>I hereby confirm that I have been designated by the canton to handle such applications</strong> (Art. 7 of the COVID-19 Certificates Ordinance) and that I am ensuring that the unique certificate identifier and the information/evidence provided is documented in such a way that the legitimate issue can later be traced at any time. \nFor details see Article 7 of the COVID-19 Certificates Ordinance <a href=”https://www.fedlex.admin.ch/eli/cc/2021/325/en#art_7”>(https://www.fedlex.admin.ch/eli/cc/2021/325/en#art_7)</a>.",
+    "certificateCreate.form.label.radio.nonRetroactive": "<strong>This is the issue</strong> of a COVID-19 certificate on the basis of the proper primary documentation (not evidence from third parties). <strong> I hereby confirm that I am in possession of the original case history or primary documentation</strong> and that I am ensuring that the unique certificate identifier and the information/evidence provided are documented in such a way that the legitimate issue can later be traced at any time.",
+    "certificateCreate.form.label.radio.retroactive": "<strong>This is the retrospective issue</strong> of a COVID-19 certificate <strong>without the original case history or primary documentation.</strong> For a vaccination or recovery abroad only for persons specified in Art. 7 para. 1 let. b of the COVID-19 Certificates Ordinance (with a right of residence in Switzerland). <strong>I hereby confirm that I have been designated by the canton to handle such applications</strong> (Art. 7 of the COVID-19 Certificates Ordinance) and that I am ensuring that the unique certificate identifier and the information/evidence provided are documented in such a way that the legitimate issue can later be traced at any time. \nFor details see Article 7 of the COVID-19 Certificates Ordinance <a href=”https://www.fedlex.admin.ch/eli/cc/2021/325/en#art_7”>(https://www.fedlex.admin.ch/eli/cc/2021/325/en#art_7)</a>.",
     "certificateCreate.form.label.recovery.countryOfTest": "Country where test performed",
     "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Date of first positive result",
     "certificateCreate.form.label.shipping": "Shipping option",
@@ -93,6 +99,9 @@
     "common.language.it": "Italian",
     "common.language.rm": "Romansh",
     "common.next": "Next",
+    "dashboard.bulk.revocation.action": "Revoke multiple certificates",
+    "dashboard.bulk.revocation.description": "You can revoke multiple generated certificates here. Revoked certificates are declared invalid and can no longer be used.",
+    "dashboard.bulk.revocation.title": "Revoke multiple certificates",
     "dashboard.createCertificate.action": "Generate certificate",
     "dashboard.createCertificate.description": "You can generate a new certificate here.",
     "dashboard.createCertificate.title": "Generate new certificate",
@@ -104,7 +113,7 @@
     "dashboard.otp.description": "You can generate a new One-Time-Password here. You need the One-Time-Password to be able to automatically generate Covid certificates with your primary system (e.g. practice information system, clinic software or pharmacist solution). The One-Time-Password is valid for 12 hours.",
     "dashboard.otp.title": "Generate new One-Time-Password",
     "dashboard.reports.action": "Generate report",
-    "dashboard.reports.description": "",
+    "dashboard.reports.description": "Here you can generate a report.",
     "dashboard.reports.title": "Report",
     "dashboard.upload.action": "Generate multiple certificates",
     "dashboard.upload.description": "Here you can generate multiple certificates.",
@@ -154,11 +163,9 @@
     "otp.key": "Private key",
     "otp.link": "Generate One-Time-Password",
     "otp.title": "Generate new One-Time-Password",
-    "report.link": "",
-    "reports.a1.title": "",
+    "report.link": "Report",
     "reports.a10.description.long": "<strong>What issuers issued what number of a specific certificate type in a defined period?</strong></br></br>After you select a certificate type, this report provides you with a list, broken down by issuer, of the total certificate types issued.",
     "reports.a10.description.short": "Overview of all issuers of a specific certificate type, including issuing channel, for a defined period.",
-    "reports.a10.title": "A7 / A10",
     "reports.a11.description.long": "<strong>Which certificates were revoked in a certain period? </strong></br></br>This report provides you with a list of all certificates revoked in the selected canton in the defined period. Please note that the revocation period does not match the certificate issue period.",
     "reports.a11.description.short": "List of certificates revoked in a certain period.",
     "reports.a11.title": "A11",
@@ -167,40 +174,44 @@
     "reports.a12.title": "A12",
     "reports.a2.description.long": "<strong>Who issued this specific certificate, when did they issue it, via what issuing channel, and what type of certificate was it?</strong></br></br>After entry of the UVCI this report provides you with information on the issuer, the time of issue, the issuing channel and the type of certificate being searched for. Information on the person for whom the certificate was issued is not available.",
     "reports.a2.description.short": "Detailed information (issuing channel, issuer, time and type of certificate) for a specific certificate UVCI. Information on the person for whom the certificate was issued is not available.",
+    "reports.a2.reset-input": "Reset entry",
     "reports.a2.title": "A2",
     "reports.a3.description.long": "<strong>How many certificates of what type did a specific issuer issue via what channels in a defined period?</strong></br></br>This report provides you with a list, broken down by issuer, of the total certificate types issued and issuing channels.",
     "reports.a3.description.short": "Number and type of all certificates issued by a specific issuer or an organisational unit.",
-    "reports.a3.title": "A3",
+    "reports.a3.title": "A3 / A5",
     "reports.a4.description.long": "<strong>What certificates (UVCI, type and time) did a specific issuer issue via what channels in a defined period?</strong></br></br>After the relevant units (organisation/issuer) have been selected and searched for, this report provides you with a list of the certificates issued, including details such as certificate type, issuing channel, time of issue and UVCI.",
     "reports.a4.description.short": "Detailed information on all certificates issued by a specific issuer or organisational unit.",
     "reports.a4.title": "A4 / A6",
     "reports.a5.description.long": "<strong>How many certificates of what type did individual issuers in a unit issue via what channels in a defined period?</strong></br></br>After the relevant units (organisation/issuer) have been selected and searched for, this report provides you with a list, broken down by issuer, of the total certificate types and issuing channels.",
     "reports.a5.description.short": "Number and type of all certificates issued by a specific issuer or an organisational unit.",
-    "reports.a5.title": "A3 / A5",
     "reports.a6.description.long": "<strong>After the relevant units (organisation/issuer) have been selected and searched for, this report provides you with a list, broken down by issuer, of the total certificate types and issuing channels.</strong></br></br>After the relevant units (organisation/issuer) have been selected and searched for, this report provides you with a list, broken down by issuer, of the certificates issued, including details such as certificate type, issuing channel, time of issue and UVCI of each certificate.",
     "reports.a6.description.short": "Detailed information on all certificates issued by a specific issuer or organisational unit.",
-    "reports.a6.title": "A4 / A6",
     "reports.a7.description.long": "<strong>What issuer issued what number of a specific certificate type in a defined period?</strong></br></br>After you select a certificate type this report provides you with a list of issuers and the number of certificates of this type issued in each case.",
     "reports.a7.description.short": "Overview of all issuers of a specific certificate type, including issuing channel, for a defined period.",
-    "reports.a7.title": "A7",
+    "reports.a7.title": "A7 / A10",
     "reports.a8.description.long": "<strong>How many certificates of the various certificate types were issued per week (max. last 3 months) via which channels?</strong></br></br>This report provides you with a weekly list of certificate types and the number of each per issuing channel (one worksheet per week). The second to nth worksheet also shows the difference to the previous week.",
     "reports.a8.description.short": "Weekly number of certificates of each type, broken down by issuing channel.",
     "reports.a8.title": "A8",
     "reports.a9.description.long": "<strong>How many certificates of the various certificate types have been issued so far over the entire issue period via which channels?</strong></br></br>This report provides you with the total number of certificates of one type issued and the channels by via which they were issued.",
     "reports.a9.description.short": "Total number of certificates of a type, broken down by issuing channel, in the entire issue period.",
     "reports.a9.title": "A9",
-    "reports.aggregation.header": "",
-    "reports.aggregation.info": "A report presenting statistical values for a specific time period is created. Suspicious values may indicate a possible case of abuse by individual issuers or organisations.",
-    "reports.aggregation.title": "Aggregation",
-    "reports.detail.header": "",
-    "reports.detail.info": "In a concrete case of suspicion a report is created showing every single action of an issuer or issuing organisation. The evidence can be used to refute or prove the concrete case of abuse.",
-    "reports.detail.title": "Detail",
-    "reports.param-help.description": "",
-    "reports.param-help.download": "",
-    "reports.param-help.title": "",
-    "reports.statistic.header": "",
-    "reports.statistic.info": "The statistical report presents overall figures for COVID certificates issued in Switzerland by certificate type.",
-    "reports.statistic.title": "Statistics",
+    "reports.aggregation.header": "Desidera ottenere una panoramica generale dei certificati emessi in Svizzera sotto forma di analisi statistica? Crei un rapporto statistico.",
+    "reports.detail.header": "Want to prove or refute a concrete case of suspicion by analysing the individual actions of an issuer? Then create an detailed report.",
+    "reports.generate": "Generate report",
+    "reports.generation.info": "Your query is being processed and the report created. If there are large volumes of data involved this can take several minutes. We ask you to be patient.\nImportant: Please do not close this window while the report is being created and do not reload, as this will cancel the creation of the report.",
+    "reports.generation.success": "Many thanks for your patience. The report has now been generated and is ready for you to download.",
+    "reports.generation.success.title": "Report successfully generated",
+    "reports.generation.success.warning": "Please note that data could not be found or displayed for all search parameters. For more detailed information, check the generated report.",
+    "reports.generation.title": "Your report is being generated",
+    "reports.generation.too-big": "The number of data sets matching the search criteria is too big and the query cannot be processed to completion. Please limit your search further.",
+    "reports.generation.too-big.title": "Error",
+    "reports.param-help.description": "If you have questions on the parameters you will find an explanation of each parameter here.",
+    "reports.param-help.download": "Download help",
+    "reports.param-help.title": "Help with parameters",
+    "reports.statistic.header": "Want a statistical analysis giving you a general overview of the issue of certificates in Switzerland? Then create a statistical report.",
+    "reports.uvci.format": "Format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
+    "reports.uvci.format.error": "The UVCI must be in the following format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx.",
+    "reports.uvci.info": "Please enter the certificate’s UVCI. If you want to have multiple UVCIs verified simultaneously, you can separate them with a space, the enter key or a comma.",
     "support.instructions": "If you have any problems with the CSV upload, please contact the BIT Helpdesk:",
     "support.instructionsUpdated": "If you are facing technical problems issuing Covid-certificates, please contact the FOITT helpdesk.",
     "support.title": "Support",
@@ -223,5 +234,6 @@
     "validation.error.http.480": "UVCI already revoked",
     "validation.error.http.482": "The CSV was not processed due to an invalid size. It must contain 1 to 100 entries.",
     "validation.error.http.485": "One or more of the requests in the CSV contain invalid data. For more detailed error messages check the returned CSV file.",
-    "validation.error.http.489": "Invalid date of birth. Please check your input in step two."
+    "validation.error.http.489": "Invalid date of birth. Please check your input in step two.",
+    "validation.error.http.497": "Your file contains duplicates. No certificates have been revoked. Please correct the file and repeat the process."
 }
