--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -1,6 +1,12 @@
 {
     "application.organization.name": "Ufficio federale dell'informatica e della telecomunicazione UFIT",
     "application.title": "Certificato COVID",
+    "bulk.revocation.file.upload": "Bloccare certificati",
+    "bulk.revocation.instructions": "È possibile bloccare diversi certificati. Per farlo, carica il file CSV contenente i dati.",
+    "bulk.revocation.link": "Bloccare più certificati",
+    "bulk.revocation.success": "La richiesta di revoca dei certificati è stata elaborata con successo.",
+    "bulk.revocation.title": "Bloccare più certificati",
+    "bulk.revocation.warning": "Non tutte le revoche hanno avuto successo. Controllare il CSV restituito per conoscere i dettagli.",
     "certificateCreate.form.group.personalData": "Dati personali",
     "certificateCreate.form.group.recovery": "Guarigione",
     "certificateCreate.form.group.test": "Test",
@@ -13,7 +19,7 @@
     "certificateCreate.form.label.personalData.firstName": "Nome",
     "certificateCreate.form.label.personalData.specialDate": "Formato insolito",
     "certificateCreate.form.label.personalData.surName": "Cognome",
-    "certificateCreate.form.label.radio.nonRetroactive": "<strong><u>Non</u> si tratta di un’emissione successiva</strong> di un certificato COVID-19. <strong>Con la presente confermo che è disponibile la cartella clinica originale o la documentazione primaria</strong> e che provvedo affinché l’identificativo univoco e le informazioni/attestazioni fornite siano documentate in modo tale che in seguito si possa ricostruire in qualsiasi momento la legittimità dell’emissione.",
+    "certificateCreate.form.label.radio.nonRetroactive": "<strong>Si tratta dell’emissione di un certificato COVID-19 sulla base della documentazione primaria</strong> del richiedente stesso (nessuna attestazione di terzi). <strong>Con la presente confermo che è disponibile la cartella clinica originale o la documentazione primaria</strong> e che provvedo affinché l’identificativo univoco e le informazioni/attestazioni fornite siano documentate in modo tale che in seguito si possa ricostruire in qualsiasi momento la legittimità dell’emissione.",
     "certificateCreate.form.label.radio.retroactive": "<strong>Si tratta di un’emissione successiva</strong> di un certificato COVID-19 <strong>senza cartella clinica originale o documentazione primaria.</strong>\nPer una vaccinazione ricevuta all’estero o una guarigione avvenuta all’estero solo per le persone di cui all’articolo7 capoverso 1 lettera b dell’ordinanza sui certificati COVID-19 (con diritto di soggiorno in Svizzera). <strong>Con la presente confermo che sono stato appositamente designato dal Cantone per l’elaborazione di tali richieste</strong> (art. 7 ordinanza sui certificati COVID-19) e che provvedo affinché l’identificativo univoco e le informazioni/attestazioni fornite siano documentate in modo tale che in seguito si possa ricostruire in qualsiasi momento la legittimità dell’emissione.\nPer i dettagli si veda l’articolo 7 dell’ordinanza sui certificati COVID-19 <a href=”https://www.fedlex.admin.ch/eli/cc/2021/325/it#art_7”>(https://www.fedlex.admin.ch/eli/cc/2021/325/it#art_7)</a>.",
     "certificateCreate.form.label.recovery.countryOfTest": "Paese in cui è stato effettuato il test",
     "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Data del primo risultato positivo",
@@ -93,6 +99,9 @@
     "common.language.it": "Italiano",
     "common.language.rm": "Romancio",
     "common.next": "Avanti",
+    "dashboard.bulk.revocation.action": "Bloccare più certificati",
+    "dashboard.bulk.revocation.description": "Qui è possibile bloccare più certificati creati. I certificati revocati sono dichiarati non validi e non possono più essere utilizzati.",
+    "dashboard.bulk.revocation.title": "Bloccare più certificati",
     "dashboard.createCertificate.action": "Crea certificato",
     "dashboard.createCertificate.description": "Qui è possibile creare un nuovo certificato.",
     "dashboard.createCertificate.title": "Creare un nuovo certificato",
@@ -103,9 +112,9 @@
     "dashboard.otp.action": "Genera One-Time-Password",
     "dashboard.otp.description": "Qui puoi generare una nuova One-Time-Password. Hai bisogno della One-Time-Password per essere in grado di generare automaticamente i certificati Covid con il tuo sistema primario (ad esempio il sistema informativo dello studio, il software della clinica o la soluzione del farmacista). La One-Time-Password generata è valida per 12 ore.",
     "dashboard.otp.title": "Generare una nuova One-Time-Password",
-    "dashboard.reports.action": "",
-    "dashboard.reports.description": "",
-    "dashboard.reports.title": "",
+    "dashboard.reports.action": "Genera il rapporto",
+    "dashboard.reports.description": "Qui è possibile generare un rapporto.",
+    "dashboard.reports.title": "Rapporto",
     "dashboard.upload.action": "Generare più certificati",
     "dashboard.upload.description": "Qui potete generare più certificati.",
     "dashboard.upload.title": "Generare più certificati",
@@ -154,11 +163,9 @@
     "otp.key": "Chiave segreta",
     "otp.link": "Genera One-Time-Password",
     "otp.title": "Generare una nuova One-Time-Password",
-    "report.link": "",
-    "reports.a1.title": "",
+    "report.link": "Rapporto",
     "reports.a10.description.long": "<strong>Quali emittenti hanno rilasciato un tipo specifico di certificato e quanti ne hanno rilasciati in un determinato periodo di tempo?</strong></br></br>Dopo che è stato selezionato un tipo di certificato, il rapporto fornisce un elenco, suddiviso per emittente, con il numero totale di tipi di certificati rilasciati.",
     "reports.a10.description.short": "Panoramica di tutti gli emittenti di uno specifico tipo di certificato, compreso il canale di emissione, per un determinato periodo di tempo.",
-    "reports.a10.title": "A7 / A10",
     "reports.a11.description.long": "<strong>Quali certificati sono stati revocati in un determinato periodo di tempo? </strong></br></br>Questo rapporto fornisce un elenco di tutti i certificati revocati durante il periodo in questione e nel Cantone selezionato. Si segnala che il periodo di revoca non corrisponde al periodo di emissione dei certificati.",
     "reports.a11.description.short": "Elenco dei certificati revocati in un determinato periodo di tempo.",
     "reports.a11.title": "A11",
@@ -167,40 +174,44 @@
     "reports.a12.title": "A12",
     "reports.a2.description.long": "<strong>Chi ha rilasciato il certificato in questione, quando e attraverso quale canale? Di che tipo di certificato si tratta?</strong></br></br>Achtung: folgender Text noch nicht definitiv, muss noch überprüft werden!\nLungo: \nDopo che sono state immesse l'UVCI, il rapporto fornisce informazioni sull'emittente, la data e il canale di emissione nonché il tipo di certificato oggetto della ricerca. Non vengono fornite informazioni sulla persona per la quale è stato rilasciato il certificato.",
     "reports.a2.description.short": "Informazioni dettagliate (canale di emissione, emittente, data del rilascio e tipo di certificato) su uno specifico identificativo del certificato (UVCI). Non vengono fornite informazioni sulla persona per la quale è stato rilasciato il certificato.",
+    "reports.a2.reset-input": "Annulla l’immissione",
     "reports.a2.title": "A2",
     "reports.a3.description.long": "<strong>Quanti certificati di quale tipo sono stati rilasciati da uno specifico emittente in un determinato periodo di tempo e attraverso quali canali?</strong></br></br>Questo rapporto fornisce un elenco, suddiviso per emittenti, con il numero totale di tipi di certificati rilasciati e i relativi canali di emissione. ",
     "reports.a3.description.short": "Numero e tipo di tutti i certificati rilasciati da uno specifico emittente o da una specifica unità organizzativa (Unit).",
-    "reports.a3.title": "A3",
+    "reports.a3.title": "A3 / A5",
     "reports.a4.description.long": "<strong>Quali certificati (UVCI, tipo, data) sono stati rilasciati da uno specifico emittente in un determinato periodo di tempo e attraverso quali canali?</strong></br></br>Dopo che è stata selezionata e cercata la rispettiva unità (organizzazione, emittente), questo rapporto fornisce un elenco dei certificati rilasciati, con i relativi dettagli, come tipo di certificato, canale di emissione, data del rilascio e UVCI.",
     "reports.a4.description.short": "Informazioni dettagliate su tutti i certificati rilasciati da uno specifico emittente o da una specifica unità organizzativa (Unit). ",
     "reports.a4.title": "A4 / A6",
     "reports.a5.description.long": "<strong>Quanti certificati di quale tipo sono stati rilasciati da uno specifico emittente di un’unità in un determinato periodo di tempo e attraverso quali canali?</strong></br></br>Dopo che è stata selezionata e cercata la rispettiva unità (organizzazione, emittente), questo rapporto fornisce un elenco, suddiviso per emittenti, con il numero totale di tipi di certificati rilasciati e i relativi canali di emissione.",
     "reports.a5.description.short": "Numero e tipo di tutti i certificati rilasciati da uno specifico emittente o da una specifica unità organizzativa (Unit).",
-    "reports.a5.title": "A3 / A5",
     "reports.a6.description.long": "<strong>Quali certificati (UVCI, tipo, data, canale) sono stati rilasciati da uno specifico emittente di un’unità in un determinato periodo di tempo?</strong></br></br>Dopo che è stata selezionata e cercata la rispettiva unità (organizzazione, emittente), questo rapporto fornisce un elenco, suddiviso per emittenti, dei certificati rilasciati, con i relativi dettagli, come tipo di certificato, canale di emissione, data del rilascio e UVCI.",
     "reports.a6.description.short": "Informazioni dettagliate su tutti i certificati rilasciati da uno specifico emittente o da una specifica unità organizzativa (Unit).",
-    "reports.a6.title": "A4 / A6",
     "reports.a7.description.long": "<strong>Quale emittente ha rilasciato uno specifico tipo di certificato in un determinato periodo di tempo e quanti di questi certificati ha rilasciato? </strong></br></br>Dopo che è stato selezionato un tipo di certificato, questo rapporto fornisce un elenco di emittenti e il numero di certificati rilasciati del tipo in questione.",
     "reports.a7.description.short": "Panoramica di tutti gli emittenti di uno specifico tipo di certificato, compreso il canale di emissione, per un determinato periodo di tempo.",
-    "reports.a7.title": "A7",
+    "reports.a7.title": "A7 / A10",
     "reports.a8.description.long": "<strong>Quanti certificati dei diversi tipi di certificato sono stati rilasciati ogni settimana (al massimo negli ultimi 3 mesi) e attraverso quali canali?</strong></br></br>Questo rapporto fornisce un elenco settimanale dei tipi di certificato rilasciati con il relativo numero per canale di emissione (un foglio di calcolo per settimana). Dal secondo all’ultimo foglio di calcolo viene inoltre mostrata la differenza totale rispetto alla settimana precedente.",
     "reports.a8.description.short": "Numero settimanale di certificati per tipo, suddivisi per canale di emissione.",
     "reports.a8.title": "A8",
     "reports.a9.description.long": "<strong>Quanti certificati dei diversi tipi sono stati rilasciati finora nell’intero periodo di emissione e attraverso quali canali?</strong></br></br>Questo rapporto fornisce il numero totale di certificati rilasciati di un tipo specifico e informa sui canali attraverso i quali sono stati rilasciati.",
     "reports.a9.description.short": "Numero totale di certificati di un tipo specifico, suddivisi per canale di emissione nell’intero periodo di emissione.",
     "reports.a9.title": "A9",
-    "reports.aggregation.header": "",
-    "reports.aggregation.info": "",
-    "reports.aggregation.title": "",
-    "reports.detail.header": "",
-    "reports.detail.info": "",
-    "reports.detail.title": "",
-    "reports.param-help.description": "",
-    "reports.param-help.download": "",
-    "reports.param-help.title": "",
-    "reports.statistic.header": "",
-    "reports.statistic.info": "",
-    "reports.statistic.title": "",
+    "reports.aggregation.header": "Desidera verificare se le cifre relative ai certificati emessi nel Suo Cantone sono indice di un possibile caso di abuso? Crei un rapporto di aggregazione.",
+    "reports.detail.header": "Desidera confermare o confutare un caso concreto di sospetto abuso analizzando le singole azioni di un dato emittente? Crei un rapporto di dettaglio.",
+    "reports.generate": "Genera il rapporto",
+    "reports.generation.info": "La richiesta è in fase di elaborazione e il rapporto verrà generato a breve. In caso di grandi quantità di dati possono essere necessari diversi minuti. Si prega di attendere.\nAttenzione: non chiudere questa finestra durante il processo di elaborazione e non ricaricare la pagina per non annullare la generazione del rapporto.",
+    "reports.generation.success": "Grazie dell’attesa. Il rapporto è stato ultimato ed è pronto per il download.",
+    "reports.generation.success.title": "Creazione avvenuta con successo",
+    "reports.generation.success.warning": "Tenga presente che non per tutti i parametri di ricerca è stato possibile trovare o emettere dati. Per indicazioni più dettagliate esamini il rapporto creato.",
+    "reports.generation.title": "Generazione del rapporto in corso",
+    "reports.generation.too-big": "Il numero di risultati corrispondenti ai criteri di ricerca è troppo grande e la ricerca non può essere completata. Si prega di restringere la ricerca.",
+    "reports.generation.too-big.title": "Errore",
+    "reports.param-help.description": "In caso di domande sui parametri, qui sono spiegati tutti.",
+    "reports.param-help.download": "Scarica l’aiuto",
+    "reports.param-help.title": "Aiuto sui parametri",
+    "reports.statistic.header": "Desidera ottenere una panoramica generale dei certificati emessi in Svizzera sotto forma di analisi statistica? Crei un rapporto statistico.",
+    "reports.uvci.format": "Formato: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
+    "reports.uvci.format.error": "L’UVCI deve essere immesso nel formato urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx.",
+    "reports.uvci.info": "Si prega di immettere l’UVCI del certificato.\nPer far verificare più UVCI insieme, separarli con uno spazio, un ritorno a capo (tasto Enter) o una virgola.",
     "support.instructions": "In caso di problemi con l'invio di CSV, si rivolga all'helpdesk dell'UFIT:",
     "support.instructionsUpdated": "Se ha dei problemi tecnici nell'emissione di certificati Covid, contatti l'helpdesk di UFIT.",
     "support.title": "Supporto",
@@ -223,5 +234,6 @@
     "validation.error.http.480": "UVCI già bloccato",
     "validation.error.http.482": "Il CSV non è stato elaborato a causa di una dimensione non valida. Deve contenere da 1 a 100 voci.",
     "validation.error.http.485": "Una o più delle query CSV contiene dati non validi. Per messaggi di errore più dettagliati, controlla il file CSV restituito.",
-    "validation.error.http.489": "Data di nascita non valida. Si prega di controllare i dati inseriti nella fase due."
+    "validation.error.http.489": "Data di nascita non valida. Si prega di controllare i dati inseriti nella fase due.",
+    "validation.error.http.497": "Il vostro file contiene duplicati. Nessun certificato è stato revocato. Correggere il file e ripetere la procedura."
 }
